Uppdatera säkerhetskonfigurationen för att inkludera nya API-endpoints och förbättra CORS-inställningar. Implementera BCryptPasswordEncoder för lösenordshantering. Rensa bort oanvänd kod och förbättra loggning i JwtAuthenticationFilter. Justera InterestController för att inkludera EmailService och ta bort debug-endpoints för att öka säkerheten.